<package>
  <name>ati_sensor</name>
  <version>1.0.0</version>
  <description>The package for FT sensors using the ATI net box.</description>
  
  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    
  </export>
</package>
